Text wrap bug fix

--- a/udooapp/src/screens/main/wall/wall.main.component.css
+++ b/udooapp/src/screens/main/wall/wall.main.component.css
@@ -110,7 +110,6 @@
   width: 100%;
   height: auto;
   overflow: hidden;
-  cursor: pointer;
   position: relative;
   padding: 10px 0;
 }
@@ -141,11 +140,10 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 .min-wall-service-content-text{
-  display: -webkit-flex;
-  display: flex;
-  flex-direction: row;
-  -webkit-flex-direction: row;
-  padding: 2px 0;
+  padding: 3px 0;
+  width: 100%;
+  height: auto;
+  word-wrap: break-word; /* Internet Explorer 5.5+ */
 }
 .main-wall-service-date {
   color: #9C9C9C;
@@ -175,9 +173,10 @@
 }
 .main-wall-service-content-changes{
   color: #378281;
+  text-decoration: none;
 }
 .main-wall-service-content span{
   color: #378281;
-  font-weight: 800;
+  font-weight: 700;
   cursor: pointer;
 }
